...
                                const RemoveAccountPage(),
                          ),
                        );
                      },
                    ),
                    ListTile(
                      key: const ValueKey('settingsLogoutTile'),
                      leading: CircleAvatar(
                        backgroundColor: Colors.grey[300],
                        child: const Icon(Icons.logout,
                            color: Colors.black),
                      ),
                      title: Text(AppLocale.t('logout')),
...
